--- a/php/src/application/views/scripts/content/about/news.phtml
+++ b/php/src/application/views/scripts/content/about/news.phtml
@@ -74,7 +74,7 @@
 <? foreach ($news as $page): ?>
     <p class="news">
         <b><a href="<?=$page->href?>">
-        <?=$page->article->title?></a></b>, 
+        <?=$page->article->title?></a></b>.&nbsp; 
         <?=$page->article->description?><br/>
         <span>published on <?=$page->article->published->get(Zend_Date::DATE_MEDIUM)?></span>
     </p>
