--- a/php/src/application/views/scripts/content/contacts.phtml
+++ b/php/src/application/views/scripts/content/contacts.phtml
@@ -2,30 +2,36 @@
  *
  * thePanel v2.0, Project Management Software Toolkit
  *
- * Redistribution and use in source and binary forms, with or without 
- * modification, are PROHIBITED without prior written permission from 
- * the author. This product may NOT be used anywhere and on any computer 
- * except the server platform of TechnoPark Corp. located at 
- * www.technoparkcorp.com. If you received this code occasionally and 
- * without intent to use it, please report this incident to the author 
- * by email: privacy@technoparkcorp.com or by mail: 
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are PROHIBITED without prior written permission from
+ * the author. This product may NOT be used anywhere and on any computer
+ * except the server platform of TechnoPark Corp. located at
+ * www.technoparkcorp.com. If you received this code occasionally and
+ * without intent to use it, please report this incident to the author
+ * by email: privacy@technoparkcorp.com or by mail:
  * 568 Ninth Street South 202, Naples, Florida 34102, USA
  * tel. +1 (239) 935 5429
  *
  * @version $Id$
 -->
- 
-<p>Call now and get immediate consultation for your software project.</p>
 
-<p>568, 9th Street South, 202<br/>
-Naples, Florida, 34102<br/>
-United States of America<br/>
-sales@technoparkcorp.com<br/>
-tel. (239) 935-5429</p>
+<p>
+    Call now and get immediate consultation for your software project.
+</p>
 
-<p>We respond to email inquiries in 24 hours or less. All online inquiries are tracked
-with SalesForce.com automation software. Please, use the form below to expedite the
-process and automate it.</p>
+<p>
+    568, 9th Street South, 202<br/>
+    Naples, Florida, 34102<br/>
+    United States of America<br/>
+    <a href="mailto:sales@technoparkcorp.com">sales@technoparkcorp.com</a><br/>
+    tel. (239) 935-5429
+</p>
+
+<p>
+    We respond to email inquiries in 24 hours or less.
+    Please, use the form below to expedite the
+    process and automate it.
+</p>
 
 <?=$this->forma()
     ->addBehavior('replace', '"<p><b>Your enquire was sent, thank you very much!</b></p>"')
@@ -44,7 +50,7 @@ process and automate it.</p>
             FaZend_Email::create()
                 ->set("toEmail", "sales@tpc2.com")
                 ->set(
-                    "body", 
+                    "body",
                     sprintf(
                         "Name: %s, Email: %s, Query: %s",
                         ${a1},
