executive team page added

--- a/php/src/application/views/scripts/content/contacts.phtml
+++ b/php/src/application/views/scripts/content/contacts.phtml
@@ -48,7 +48,7 @@
         ->fieldAction(
             '
             FaZend_Email::create()
-                ->set("toEmail", "sales@tpc2.com")
+                ->set("toEmail", "sales@technoparkcorp.com")
                 ->set(
                     "body",
                     sprintf(
