links in home page

--- a/css/_home.scss
+++ b/css/_home.scss
@@ -41,6 +41,7 @@
       padding-right: 70px;
       a {
         text-decoration: none;
+        display: block;
         color: #9cacb6;
       }
     }
