--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -17,7 +17,7 @@ layout: default
     </div>
   </div>
   <div class="crumbs" role="navigation">
-    bread
+    {{ page | breadcrumbs }}
   </div>
   <article itemscope itemtype="http://schema.org/Article" class="white">
     <ul class="steps">
