--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -23,12 +23,7 @@ layout: default
   </div>
   <article itemscope itemtype="http://schema.org/Article" class="white">
     <ul class="steps">
-      <li>
-        <a href="">Read about Quality Management and cost of quality we suggest</a>
-      </li>
-      <li>
-        <a href="">Read how projects are quoted, estimated, and paid</a>
-      </li>
+      {% steps %}
     </ul>
     <div class="page" itemprop="articleBody">
       <h1>{{ page.title }}</h1>
