--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -31,8 +31,7 @@ layout: default
     </div>
   </article>
   <ul class="menu" role="navigation">
-    <li>About us</li>
-    <li>Contacts</li>
+    {% menu %}
   </ul>
   <div class="wl">
     {% if page.date %}
