--- a/css/_article.scss
+++ b/css/_article.scss
@@ -67,47 +67,23 @@
     }
   }
   .wl {
+    background-color: $gray;
     padding: 5px 37px;
     text-align: right;
     color: $lightgray;
     font-size: 0.9 * $em;
+    clear: both;
     time {
       color: $blue;
     }
   }
-  .menu {
-    z-index: 50;
-    position: absolute;
-    top: 30px;
-    left: 0;
-    background-color: $gray;
-    list-style: none;
-    border-radius: 10px;
-    width: 180px;
-    min-width: 180px;
-    min-height: 100px;
-    padding: 30px 5px 5px 5px;
-    border: 1px solid $lightgray;
-    ul {
-      list-style: none;
-      margin-left: 10px;
-    }
-    li {
-      a {
-        text-decoration: none;
-        color: $black;
-        &.active, &:hover {
-          color: $blue;
-        }
-      }
-    }
-  }
   .white {
     background-color: white;
-    padding-left: 190px;
     min-height: 400px;
     .page {
       padding: 20px;
+      width: 450px;
+      margin-left: 190px;
       h1 {
         font-size: 2.4 * $em;
         font-weight: normal;
@@ -139,6 +115,36 @@
         td, th {
           vertical-align: top;
           padding: 2px;
+        }
+      }
+    }
+    .menu {
+      z-index: 50;
+      float: left;
+      margin-top: -10px;
+      margin-left: -10px;
+      margin-bottom: 30px;
+      background-color: $gray;
+      list-style: none;
+      border-radius: 10px;
+      width: 190px;
+      min-width: 190px;
+      min-height: 100px;
+      padding: 30px;
+      ul {
+        list-style: none;
+        margin-left: 10px;
+      }
+      & > li > a {
+        font-weight: bold;
+      }
+      li {
+        a {
+          text-decoration: none;
+          color: $black;
+          &.active, &:hover {
+            color: $blue;
+          }
         }
       }
     }
