--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,13 +16,13 @@ top:
     label: Contacts
     title: Email, phone, fax and online contacts
 bottom:
-  sitemap:
+  about/sitemap:
     label: Site Map
     title: Full list of site pages in hierarchical order
-  legalnotes:
+  about/legalnotes:
     label: Legal Notes
     title: Legal terms of use of the site
-  privacy:
+  about/privacy:
     label: Privacy Policy
     title: Privacy policy for Personally Identifiable Information(PII)
 ---
