tikz works fine

--- a/css/_article.scss
+++ b/css/_article.scss
@@ -110,9 +110,12 @@
           color: $blue;
         }
       }
-      img.tikz {
-        width: 50%;
-        height: 50%;
+      p.tikz {
+        text-align: center;
+        img {
+          width: 80%;
+          height: 80%;
+        }
       }
       table {
         width: 100%;
