ALT for home image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@ bottom:
     <div class="wrapper">
       <div class="banner">Software Development General Contractor</div>
       <a title="Home page of TechnoParkCorp.com" href="/" class="logo">
-        <img src="//img.technoparkcorp.com/logo.svg"/>
+        <img src="//img.technoparkcorp.com/logo.svg" alt="logo of TechnoPark Corp."/>
       </a>
       <div class="box">
         <div>&nbsp;</div>
@@ -76,7 +76,7 @@ bottom:
         &copy; TechnoPark Corp., 2000-2014
         <a title="Read more about ISO 9001:2000 certification that was obtained by TechnoPark Corp."
           href="" class="iso">
-          <img src=""/>
+          <img src="#"/>
         </a>
       </div>
     </div>
