--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,10 +46,16 @@ bottom:
   </head>
   <body>
     <div class="wrapper">
-      <div class="banner">Software Development General Contractor</div>
-      <a title="Home page of TechnoParkCorp.com" href="/" class="logo">
-        <img src="//img.technoparkcorp.com/logo.svg" alt="logo of TechnoPark Corp."/>
-      </a>
+      <div class="top">
+        <div class="banner">Software Development General Contractor</div>
+        <a title="Our recent Team-as-a-Service offer" href="/" class="teamed-logo">
+          also seen as
+          <img src="//img.teamed.io/logo-light.svg" alt="logo of teamed.io"/>
+        </a>
+        <a title="Home page of TechnoParkCorp.com" href="/" class="logo">
+          <img src="//img.technoparkcorp.com/logo.svg" alt="logo of TechnoPark Corp."/>
+        </a>
+      </div>
       <div class="box">
         <div>&nbsp;</div>
         <ul class="tl">
@@ -75,8 +81,8 @@ bottom:
       <div class="sub">
         &copy; TechnoPark Corp., 2000-2014
         <a title="Read more about ISO 9001:2000 certification that was obtained by TechnoPark Corp."
-          href="" class="iso">
-          <img src="#"/>
+          href="/about/news/year2008/iso9001" class="iso">
+          <img src="//img.technoparkcorp.com/iso.svg"/>
         </a>
       </div>
     </div>
