--- a/css/_global.scss
+++ b/css/_global.scss
@@ -30,10 +30,8 @@ body {
   font-family: 'Verdana', sans-serif;
   color: $black;
   background-color: $gray;
-  padding: 5px;
 }
 
-/* global wrapper of content */
 .wrapper {
   position: relative;
   clear: both;
@@ -42,21 +40,37 @@ body {
   width: 800px;
 }
 
-/* top left banner with a title of our company */
-.banner {
-  position: absolute;
-  left: 38px;
-  top: -25px;
-}
-
-/* top right logo */
-.logo {
-  position: absolute;
-  top: -70px;
-  right: 38px;
-  img {
-    width: 80px;
-    height: 58px;
+.top {
+  position: relative;
+  height: 70px;
+  vertical-align: bottom;
+  margin-bottom: 7px;
+  .banner {
+    position: absolute;
+    bottom: 0;
+    left: 37px;
+  }
+  .logo {
+    position: absolute;
+    bottom: 0;
+    right: 37px;
+    img {
+      width: 80px;
+      height: 58px;
+    }
+  }
+  .teamed-logo {
+    position: absolute;
+    bottom: 0px;
+    right: 150px;
+    width: 100px;
+    text-align: center;
+    text-decoration: none;
+    color: $darkgray;
+    img {
+      width: 96px;
+      height: 19px;
+    }
   }
 }
 
@@ -64,7 +78,6 @@ body {
   position: relative;
   background-color: $black;
   border-radius: 10px;
-  margin-top: 80px;
 }
 
 /* top line with links */
@@ -102,13 +115,19 @@ body {
 
 /* bottom sub text */
 .sub {
+  position: relative;
   font-size: 90%;
   margin-left: 39px;
   margin-top: 4px;
+  margin-bottom: 15px;
   .iso {
     position: absolute;
-    top: 5px;
-    right: 36px;
+    top: 1px;
+    right: 37px;
+    img {
+      width: 76px;
+      height: 11px;
+    }
   }
 }
 
