--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@ bottom:
     <div class="wrapper">
       <div class="top">
         <div class="banner">Software Development General Contractor</div>
-        <a title="Our recent Team-as-a-Service offer" href="/" class="teamed-logo">
+        <a title="Our recent Team-as-a-Service offer" href="http://www.teamed.io" class="teamed-logo">
           also seen as
           <img src="//img.teamed.io/logo-light.svg" alt="logo of teamed.io"/>
         </a>
