--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@ bottom:
   about/legalnotes:
     label: Legal Notes
     title: Legal terms of use of the site
-  about/privacy:
+  about/privacypolicy:
     label: Privacy Policy
     title: Privacy policy for Personally Identifiable Information(PII)
 ---
