news into top menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,12 @@ top:
   about:
     label: About us
     title: Facts, history, key achievements or TechnoPark Corp.
+  about/news:
+    label: News
+    title: Latest news and press releases about TechnoPark Corp.
   process:
     label: Process
     title: Our approach to time/cost/scope and risk management
-  stories:
-    label: Success Stories
-    title: List of the latest projects with technical and management details
   innovations:
     label: Innovations
     title: Our strength is in our inventions
