--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -11,6 +11,7 @@ layout: default
       {{/entries}}
     </script>
     {% endraw %}
+    <span id="menu" onclick="$('.menu').show();">menu</span>
     <input id="search-query" name="q" placeholder="Search..." autocomplete="off" size="35"/>
     <div id="search-results">
       <ul class="entries"></ul>
