--- a/css/_global.scss
+++ b/css/_global.scss
@@ -19,10 +19,16 @@ body {
   clear: both;
   margin-left: auto;
   margin-right: auto;
-  width: 800px;
+  width: $width;
+  @media all and (max-width: $width) {
+    width: 100%;
+  }
 }
 
 .top {
+  @media all and (max-width: $width) {
+    display: none;
+  }
   position: relative;
   height: 70px;
   vertical-align: bottom;
@@ -60,10 +66,16 @@ body {
   position: relative;
   background-color: $black;
   border-radius: 10px;
+  @media all and (max-width: $width) {
+    border-radius: 0;
+  }
 }
 
 /* top line with links */
 .tl, .bl {
+  @media all and (max-width: $width) {
+    display: none;
+  }
   list-style: none;
   li {
     display: inline;
@@ -97,6 +109,9 @@ body {
 
 /* bottom sub text */
 .sub {
+  @media all and (max-width: $width) {
+    display: none;
+  }
   position: relative;
   font-size: 90%;
   margin-left: 39px;
