--- a/css/_article.scss
+++ b/css/_article.scss
@@ -8,6 +8,17 @@
     text-align: right;
     padding: 5px 37px;
     z-index: 100;
+    @media all and (max-width: $width) {
+      padding-right: 5px;
+    }
+    #menu {
+      position: absolute;
+      left: 5px;
+      top: 5px;
+      cursor: pointer;
+      color: white;
+      font-weight: bold;
+    }
     input {
       font-size: $em;
       padding: 2px 5px;
@@ -47,6 +58,9 @@
         color: $black;
       }
     }
+    @media all and (max-width: $width) {
+      padding-left: 5px;
+    }
   }
   .wl {
     background-color: $gray;
@@ -55,6 +69,9 @@
     color: $lightgray;
     font-size: 0.9 * $em;
     clear: both;
+    @media all and (max-width: $width) {
+      padding-right: 5px;
+    }
     time {
       color: $blue;
     }
@@ -66,6 +83,10 @@
       padding: 20px;
       width: 450px;
       margin-left: 190px;
+      @media all and (max-width: $width) {
+        width: 100%;
+        margin-left: 0;
+      }
       h1 {
         font-size: 2.4 * $em;
         font-weight: normal;
@@ -110,6 +131,12 @@
       }
     }
     .menu {
+      @media all and (max-width: $width) {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
       z-index: 50;
       float: left;
       margin-top: -10px;
@@ -143,6 +170,9 @@
       }
     }
     .steps {
+      @media all and (max-width: $width) {
+        display: none;
+      }
       width: 157px;
       min-width: 157px;
       list-style: none;
