--- a/css/_article.scss
+++ b/css/_article.scss
@@ -89,6 +89,7 @@
       @media all and (max-width: $width) {
         width: 100%;
         margin-left: 0;
+        font-size: 1.2 * $em;
       }
       h1 {
         font-size: 2.4 * $em;
